--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -15,7 +15,7 @@
        {
            Culture=UICulture="tr-TR";
        }
-    var roller=Roles.GetRolesForUser(WebSecurity.CurrentUserName);
+    var roller=Roles.GetRolesForUser(WebSecurity.CurrentUserName);    var abonelikVar=(db.QueryValue("SELECT count(*) FROM Abone INNER JOIN UyelikPaketleri ON Abone.PaketID=UyelikPaketleri.PaketID WHERE Abone.UserID=@0 AND Durum=1",WebSecurity.CurrentUserId)>0);
     var sonAktiviteID="";
     List<Aktivite> listeAktiviteler=new List<Aktivite>();
     IEnumerable<dynamic> queryAktiviteler=null;    IEnumerable<dynamic> queryDerslerim=null;
@@ -101,9 +101,9 @@
                                     <i class="fa fa-plus-circle fa-2x"></i>
                                     <span class="caret"></span>
                                   </button>
-                                                    @if (roller.Contains("Ogretici"))                       {
+                                                    @if (roller.Contains("Ogretici") && abonelikVar)                       {
                        
-                               <ul class="dropdown-menu" aria-labelledby="dLabel">                                                                             <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> Dosya Ekle </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> Ödev Ver </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYaziEkle"><i class="fa fa-tasks fa-fw"></i> İçerik Paylaş </a></li>                                                                             <li><a href="#" data-toggle="modal" data-target="#modalDersEkle"><i class="fa fa-book fa-fw"></i> Yeni  Bir Ders Sayfası Oluştur </a></li>                                          </ul>   
+                               <ul class="dropdown-menu" aria-labelledby="dLabel">                                                                             <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> Dosya Ekle </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> Ödev Ver </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYaziEkle"><i class="fa fa-tasks fa-fw"></i> İçerik Paylaş </a></li>                                                                             <li><a href="#" data-toggle="modal" data-target="#modalDersEkle"><i class="fa fa-book fa-fw"></i> Yeni  Bir Ders Sayfası Oluştur </a></li>                                  </ul>   
                        
                        
                      
@@ -229,7 +229,7 @@
       </div>
     </div>
   </div>
-</div> @if (roller.Contains("Ogretici")) {
+</div> @if (roller.Contains("Ogretici") && abonelikVar) {
 <div class="modal" id="modalYeniOdevVer" tabindex="-1" role="dialog" aria-labelledby="odevVermyModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
