--- a/Dosya/Indir.cshtml
+++ b/Dosya/Indir.cshtml
@@ -43,8 +43,7 @@
  
  if (erisimAcik)
  {
-
-   var bantGenisligiKota=db.QueryValue("SELECT ISNULL(SUM(BantGenisligi),0) FROM Abone INNER JOIN UyelikPaketleri ON Abone.PaketID=UyelikPaketleri.PaketID WHERE Abone.UserID=@0 AND Durum=1",queryDosya.UserID);
+    var bantGenisligiKota=db.QueryValue("select ISNULL(SUM(BantGenisligi),0) from Abonelik_SatinAlinan INNER JOIN Abonelik ON Abonelik_SatinAlinan.AbonelikID=Abonelik.AbonelikID INNER JOIN  UyelikPaketleri ON UyelikPaketleri.PaketID=Abonelik.PaketID  WHERE BaslangicTarihi<GETDATE() AND BitisTarihi>Getdate() AND Abonelik_SatinAlinan.UserID=@0",WebSecurity.CurrentUserId);
    var kullanilanKota=db.QueryValue("SELECT ISNULL(SUM(Dosya.Boyut),0) FROM Dosya INNER JOIN DosyaIndirilen ON Dosya.DosyaID=DosyaIndirilen.DosyaID WHERE Dosya.UserID=@0 AND month(DosyaIndirilen.Tarih)=@1",queryDosya.UserID,DateTime.Now.Month);
  
    if (kullanilanKota+queryDosya.Boyut>bantGenisligiKota)
