--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -93,7 +93,7 @@
 }
 
 <div class="row"> 
-    <div class="col-lg-12">        @if (!abonelikVar)        {            <p class="alert alert-danger">Aboneliğinizin Süresi Doldu</p>        }
+    <div class="col-lg-12">        @if (abonelikVar==false && roller.Contains("Ogretici"))        {            <p class="alert alert-danger">Aboneliğinizin Süresi Doldu</p>        }
                             <div class="dropdown">
 
                         
