--- a/Hesap/YeniEgitmen.cshtml
+++ b/Hesap/YeniEgitmen.cshtml
@@ -47,7 +47,7 @@
              if (queryDogrulamaKodu==0)
              {
                  hataVar=true;
-                 mesajDogrulamaKoduHatali="Doğrulama Kodu Hatalı";
+                 mesajDogrulamaKoduHatali="Hata: Lütfen Abonelik Kodunuzu Kontrol Ediniz.";
              }
         }
 
