--- a/Odev/Goster.cshtml
+++ b/Odev/Goster.cshtml
@@ -299,13 +299,14 @@
    
             <div class="col-lg-12">
                
-                  <input type="hidden" value="@queryOdev.OdevID" name="OdevID" id="txtOdevID">
+                  <input type="hidden" value="@queryOdev.OdevID" name="OdevID" id="txtOdevID">     
+                       
+                  <label>Ödev Metni:</label>
+                  <textarea class="form-control" name="txtMetin" id="txtMetin" placeholder="Ödevinizi Buraya Yazınız..."></textarea>
   
                   <label>@Resources.Resource.lblBilgisayardaDosyaSec</label>
                   <input type="file" class="form-control" id="txtDosya" name="file" placeholder="@Resources.Resource.lblDosyaSec">
-               
-                  <label>@Resources.Resource.lblAciklama</label>
-                  <textarea class="form-control" name="txtAciklama" id="txtAciklama" placeholder="@Resources.Resource.msgOdevIleilgiliKisaAciklamaGir"></textarea>
+   
            
            </div>
 
