--- a/Odev/Goster.cshtml
+++ b/Odev/Goster.cshtml
@@ -308,7 +308,7 @@
                   <label>Ödev Metni:</label>
                   <div id="txtMetin"></div>
                   
-                  <label>@Resources.Resource.lblBilgisayardaDosyaSec</label>
+                  <label>Dosya Eki:</label>
                   <input type="file" class="form-control" id="txtDosya" name="file" placeholder="@Resources.Resource.lblDosyaSec">
    
            
